# app/Http/Controllers/Api/User/ForgetPasswordUserController.php
@@ -2,14 +2,14 @@
 
 namespace App\Http\Controllers\Api\User;
 
+use App\Enum\UserRole;
 use App\Http\Controllers\Controller;
-use App\Http\Requests\Api\User\OnboardingRequest;
-use App\Http\Requests\Api\User\RefreshPasswordRequest;
-use App\Http\Resources\OnboardingUser\OnboardingClientResource;
+use App\Http\Requests\Api\User\ForgetPasswordRequest;
+use App\Http\Resources\User\UserMinifiedResource;
 use App\Models\User;
 use App\Services\ConfirmSms\ConfirmSmsService;
-use App\UseCases\User\ForgetPassword\Dto\ForgetPasswordUserDto;
-use App\UseCases\User\ForgetPassword\ForgetPasswordUserUseCase;
+use App\UseCases\User\ChangePassword\Dto\ForgetPasswordUserDto;
+use App\UseCases\User\ChangePassword\ForgetPasswordUserUseCase;
 use Illuminate\Support\Facades\DB;
 
 
@@ -23,6 +23,7 @@ use Illuminate\Support\Facades\DB;
  *              mediaType="application/json",
  *              @OA\Schema(
  *                  @OA\Property(property="phone", type="string", example="79161234567", description="Телефон юзера, которому нужна смена пароля", nullable=false),
+ *                  @OA\Property(property="role", type="string", example="driver", enum={"client", "driver"}, description="Роль юзера, которому нужна смена пароля", nullable=false),
  *                  @OA\Property(property="password", type="string", example="1234567s", description="Новый пароль юзера", nullable=false),
  *             )
  *         )
@@ -34,6 +35,7 @@ use Illuminate\Support\Facades\DB;
  *              @OA\Property(property="user", type="object",
  *                  @OA\Property(property="id", type="string", example="15735744919122398"),
  *                  @OA\Property(property="phone", type="string", example="79161234567"),
+ *                  @OA\Property(property="role", type="string", example="driver"),
  *              ),
  *         )
  *     )
@@ -48,40 +50,44 @@ class ForgetPasswordUserController extends Controller
     {
     }
 
-    public function __invoke(RefreshPasswordRequest $request)
+    public function __invoke(ForgetPasswordRequest $request)
     {
         $data = $request->validated();
 
         $user = User::query()
             ->where('phone', $data['phone'])
+            ->where('role', $data['role'])
             ->first();
 
-        if ($user) {
-            try {
-                DB::beginTransaction();
+        if (!$user) {
+            return responseFailed(404, __('exceptions.user_not_found'));
+        }
 
-                $forgetPasswordUserDto = (new ForgetPasswordUserDto())
-                    ->setPhone($data['phone'])
-                    ->setPhoneCode(random_int(100000, 999999))
-                    ->setNewPassword($data['new_password'])
-                    ->setPhoneCodeDatetime(now()->format('Y-m-d H:i:s'));
-                $user = $this->forgetPasswordUserUseCase->handle($forgetPasswordUserDto);
+        try {
+            DB::beginTransaction();
 
-                DB::commit();
-            } catch (\Exception $exception) {
-                DB::rollBack();
+            $forgetPasswordUserDto = (new ForgetPasswordUserDto())
+                ->setPhone($data['phone'])
+                ->setRole(UserRole::from($data['role']))
+                ->setPhoneCode(random_int(100000, 999999))
+                ->setNewPassword($data['new_password'])
+                ->setPhoneCodeDatetime(now()->format('Y-m-d H:i:s'));
+            $user = $this->forgetPasswordUserUseCase->handle($forgetPasswordUserDto);
 
-                return response()->json([
-                    'message' => $exception->getMessage()
-                ], 500);
-            }
+            DB::commit();
+        } catch (\Exception $exception) {
+            DB::rollBack();
+
+            return response()->json([
+                'message' => $exception->getMessage()
+            ], 500);
         }
 
         $response = $this->confirmSmsService->setSmsUser($user)->sendSmsToUser();
 
         if ($response->status() === 200 && strtolower($response->json()['status']) === 'ok') {
             return response()->json([
-                'user' => OnboardingClientResource::make($user)->resolve(),
+                'user' => UserMinifiedResource::make($user)->resolve(),
             ]);
         } else {
             $message = __('exceptions.sms_server_error') .
