# app/Http/Requests/Api/User/ForgetPasswordRequest.php
@@ -7,7 +7,7 @@ use App\Http\Requests\Api\ApiRequest;
 use App\Rules\User\CheckExistsPhoneRole;
 use Illuminate\Validation\Rules\Enum;
 
-class RefreshPasswordRequest extends ApiRequest
+class ForgetPasswordRequest extends ApiRequest
 {
     /**
      * Get the validation rules that apply to the request.
@@ -19,7 +19,13 @@ class RefreshPasswordRequest extends ApiRequest
         return [
             'role' => ['required', new Enum(UserRole::class)],
             'phone' => ['required', 'digits:11',  'exists:users,phone', new CheckExistsPhoneRole($this->role)],
-            'phone_code' => ['required', 'digits:6'],
+            'new_password' => [
+                'required',
+                'min:8',
+                'regex:/[A-Za-z]/',
+                'regex:/[0-9]/',
+            ],
+
         ];
     }
 
@@ -29,8 +35,9 @@ class RefreshPasswordRequest extends ApiRequest
             'phone.required' => __('validation.custom.attribute-name.phone_required'),
             'phone.digits' => __('validation.custom.attribute-name.phone_format'),
             'phone.exists' => __('validation.custom.attribute-name.phone_exists'),
-            'phone_code.required' => __('validation.custom.attribute-name.phone_code_required'),
-            'phone_code.digits' => __('validation.custom.attribute-name.phone_code_format'),
+            'new_password.required' => __('validation.custom.attribute-name.password_required'),
+            'new_password.min' => __('validation.custom.attribute-name.password_min'),
+            'new_password.regex' => __('validation.custom.attribute-name.password_regex'),
             'role.required' => __('validation.custom.attribute-name.role_required'),
             'role.enum' => __('validation.custom.attribute-name.role_enum'),
         ];
