# app/Http/Resources/User/UserMinifiedResource.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Http\Resources\User;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class UserMinifiedResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'phone' => $this->phone,
+            'role' => $this->role,
+        ];
+    }
+}
